<resources>
    <string name="app_name" translatable="false">Madrid Encantada</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="map">Map</string>
    <string name="points_of_interest">Points of interest</string>
    <string name="options">Options</string>
    <string name="audio_guide">Audio Guide</string>
    <string name="language_key_preferencias" translatable="false">Idioma</string>
    <string name="manual">Manual</string>
    <string name="title_activity_map" translatable="false">MapActivity</string>
    <string name="title_activity_point_map">Map</string>
    <string name="title_activity_all_points_of_interest">All points of interest</string>
    <string name="title_activity_audio_maps">Audio guide</string>
    <string name="welcome" translatable="false">MADRID ENCANTADA</string>
    <string name="welcome2">A ghostly app</string>
    <string name="sofia">Reina Sofia Museum</string>
    <string name="banco">Bank of Spain</string>
    <string name="ayuntamiento">Communicactions Palace (Cityhall of Madrid)</string>
    <string name="linares">Linares\' Palace (American\'s house)</string>
    <string name="ejercito">Headquarters of the Army</string>
    <string name="chimenea">The house of the 7 chimneys</string>
    <string name="iglesia">San Jose´s church</string>
    <string name="teatro">Español theater</string>
    <string name="ana">Santa Ana´s square</string>
    <string name="hotel">Hotel del Gato</string>
    <string name="cabeza">Cabeza Street</string>
    <string name="palacio">Santa Cruz\' Palace</string>
    <string name="mayor">Main square (Plaza Mayor)</string>
    <string name="guide_me">Bring me there</string>
    <string name="ipsum" translatable="false">Lorem fistrum sexuarl torpedo no puedor por la gloria de mi madre apetecan qué dise usteer ese pedazo de. A wan va usté muy cargadoo te va a hasé pupitaa apetecan pupita quietooor al ataquerl no puedor. Está la cosa muy malar qué dise usteer a gramenawer a peich. Qué dise usteer me cago en tus muelas a wan se calle ustée ese hombree mamaar a peich. Torpedo amatomaa torpedo me cago en tus muelas ese pedazo de no te digo trigo por no llamarte Rodrigor al ataquerl mamaar apetecan a gramenawer no te digo trigo por no llamarte Rodrigor. </string>
    <string name="how_to_arrive">How to arrive</string>
    <string name="listen">Audio</string>
    <string name="key_language" translatable="false">language</string>
    <string name="surf">Select any points</string>
    <string name="explain_audio">The audio will be played when you get close to the point</string>
    <string name="history">History</string>
    <string name="information">Information</string>
    <string name="gps_network_not_enabled">GPS is not activated</string>
    <string name="open_location_settings">Open GPS options</string>
    <string name="Cancel">Cancel</string>
    <string name="gps_permitions">Accept geolocation permissions</string>
    <string name="gps_near">You are close to</string>
    <string name="gps_inside">YOU ARE IN</string>
    <string name="toast_gps">Please allow GPS connection</string>
    <string name="str_button">Change languaje</string>
    <string name="str_spanish">Spanish</string>
    <string name="str_english">English</string>
    <string-array name="languages">
        <item>@string/str_spanish</item>
        <item>@string/str_english</item>
    </string-array>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="language">Language</string>
    <string name="historia_ejercito">At the end of the eighteenth century (1777), the Dukes of Alba ordered to build on this estate what was to be called the Buenavista Palace. Richly decorated with paintings and sculptures, the palace has always been accompanied by tragedy. Thus after two fires, the building was expropriated to the dukes in 1807 and Fernando VII quickly made it available to the military. Since then, great personalities of the History of Spain (generals Espartero and Prim, Manuel Azaña, Miguel Primo de Rivera ...) have lodged between their walls with unequal fortune.\n\n
        The first of the stories surrounding this building speaks of a Civil Guard who would have killed himself near the Stairs of Honor. Since then lot of soldiers say they have heard steps without owner, felt sudden changes of temperature and they even speak of an armored door that has opened without anyone triggering its mechanism.\n\n
        We talked before the stay of personalities in the palace. For General Prim this would be his last dwelling since on December 30, 1870 this military man would die in strange circumstances and even today one can perceive in his quarters an inquisitive presence that seems to want to urge us to discover the truth about his death.</string>
    <string name="historia_museo">If we have learned anything from the horror films of the last few decades, it is that building something, whatever it is, inside the enclosure of what used to be a hospital is not the best of the ideas. One of the most important art galleries in the capital, was born as San Carlos hospital back in the time of Felipe III. The building, always surrounded by the mists of mystery and on which dozens of rumors about ghosts and specters in its windows ran, saw its history growing and reaching all corners of Spain after the decision to lodge the Guernica on its walls , Perhaps the most famous painting of the genius Pablo Picasso.\n\n
        The events around this building have been so many and so intense (elevators that worked alone without electric current, appearances in dark corridors ...) that motivated a series of complaints against the City of Madrid in 2000 by a cleaner who was terrified by the inexplicable events that he had witnessed there.</string>
    <string name="information_museo">For more information about prices and timetables please visit its official web page</string>
    <string name="historia_banco">What does a nun do in the cellars of the main financial institution in our country? No, it\'s not a bad joke. But the appearance of a spectrum dressed in a white habit that has been dedicated to complicate the life of the cleaning staff of the emblematic building to the point that there is real fear on the part of employees to go through according to which corridors without company.\n\n
        To find an explanation we have to go back to 1891, the year in which the first version of the building is inaugurated (previous to later expansions). For its construction there were demolished the palace of the marquesses of Alcañices and the church of San Fermin of the Navarros. Was there perhaps a nun buried there who did not see well that her eternal rest was disturbed by the works of a temple dedicated to the vile metal? We cannot find out because of the secrecy that surrounds everything that happens behind the walls of this building, but it is curious that the corridors where more appearances have been reported correspond to those that lead to the rooms where the documents that tell the story of the Bank are kept and that more than one worker has talked about books whose pages are spent alone in these sections of the building.</string>
    <string name="information_banco">You can pay a virtual visit through Bank of Spain web page</string>
    <string name="historia_ayuntamiento">Within our journey through the dark and the hidden of the Haunted Villa of Madrid we could not let the headquarters of his government pass. The former Post Office (or Post Office Palace), built at the beginning of the 20th century and silent witness to the bloodiest episodes of the Civil War, was falling into disuse within the years and the gradual entry of new technologies. Until 2007 it was decided to give a new life to the building by turning it into the new and brand new headquarters of the City of Madrid.\n\n
        The work to refurbish the old palace was progressing, when Manuel Ramirez Torrecilla (a relatively young ex-guard of the precinct), on a fateful January afternoon, parked his car in front of the doors to the Calle Montalbán, entered the palace and greeted the actual guard with six shots of the shotgun in his hands. Without trembling his pulse, Manuel reloaded and continued advancing to end the life of another of the vigilantes and seriously wounding a third (also with six shots) while a fourth security officer and a worker watched the scene terrorized from a safe place. From there they would see Manuel standing in the middle of the yard, looking around as if he had just awakened from a dream and aimed himself with the murder weapon to end up committing suicide.\n\n
        This makes us realize that it is not necessary to go much back to find stories of ghosts and apparitions. And is that, as a result of these facts, every time that an anniversary of the massacre of the city council is approaching there are those who say that you can hear steps that advance from the doors of the street Montalbán. Steps that stop only when they are drowned by the echoes of a shotgun that shoots again and again.</string>
    <string name="historia_america">Probably the most famous of all the enchanted places of the capital and central place of one of its most tragic stories. In the middle of Cibeles square, in 1873, Don José de Murga built a mansion that was to become, in addition to his residence, a place of meetings and parties for the upper class in Madrid. Too bad that by the time the building could be completely inaugurated (in 1900) the Marquis de Linares had already been dead for two years.\n\n
        The story goes that Don Francisco Mateo de Murga, father of our protagonist, was known for his encouragement to the party and his many love affairs away from the marital bed. One of these amorous dribbling would result in the birth of a girl (Raimunda) of whom, over the years, Don José would fall madly in love. José\'s father, aware of the blood ties that united the two lovers, would have strongly opposed this relationship. But when his father died, Don José found no obstacle to marry this humble tent.\n\n
        Here the stories are mixed and somewhat confusing. And although there are those who say that both lovers knew from Don Francisco\'s about their status as half-brothers, other stories tell us about a happy couple who, shortly after having their first daughter, would have discovered (thanks to some old letters of his father) belonging to the same lineage and who, fearful of repercussions, would have ended the life of the newborn baby. The other version, equally truculent, speaks of a clergy who reluctantly approved of their union on the condition that they did not leave offspring and a couple who, faced with the prospect of losing their social status, would have opted to end the life of their daughter.\n\n
        Since then, hundreds of sightings of figures who wander about in the windows of the palace have been reported. There are also numerous psychophonies of laughter, baby cries and even phrases that takes the wind (it is famous that one of \"Take my skirt away\") that have been documented in this place.</string>
</resources>