<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_place"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="top"
                android:scaleType="centerInside"
                android:src="@drawable/museo_reina_sofia" />

            <TextView
                android:id="@+id/tv_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ipsum" />

            <TextView
                android:id="@+id/tv_legend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ipsum" />

            <TextView
                android:id="@+id/tv_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ipsum" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_go_to_audio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/listen" />

        <Button
            android:id="@+id/button_go_to_map"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/guide_me" />

    </LinearLayout>

</RelativeLayout>