<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="geo.rutas.madrid.com.madridencantada.activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <!--Imagen portada-->
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@drawable/madrid" />

    <!--"Recuadro" de los botones-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center"
        android:orientation="vertical">

        <!--Botón de "mapa"-->

        <RelativeLayout
            android:id="@+id/button_map"
            android:layout_width="match_parent"
            android:layout_height="?attr/listPreferredItemHeightSmall"
            android:layout_gravity="center"
            android:layout_marginBottom="7dp"
            android:background="@drawable/selector_button_main"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="7dp"
                android:src="@drawable/map" />

            <TextView
                android:id="@+id/tv_map"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/map"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>


        <!--Botón de "puntos de interés"-->

        <RelativeLayout
            android:id="@+id/button_point_of_interest"
            android:layout_width="match_parent"
            android:layout_height="?attr/listPreferredItemHeightSmall"
            android:layout_gravity="center"
            android:layout_marginBottom="7dp"
            android:background="@drawable/selector_button_main"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="7dp"
                android:src="@drawable/pin" />

            <TextView
                android:id="@+id/tv_points_of_interest"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/points_of_interest"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>


        <!--Botón de "auidio guía"-->

        <RelativeLayout
            android:id="@+id/button_audio_guide"
            android:layout_width="match_parent"
            android:layout_height="?attr/listPreferredItemHeightSmall"
            android:layout_gravity="center"
            android:layout_marginBottom="7dp"
            android:background="@drawable/selector_button_main"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="7dp"
                android:src="@drawable/headphones" />

            <TextView
                android:id="@+id/tv_audio_guide"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/audio_guide"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>


        <!--Botón de "opciones"-->

        <RelativeLayout
            android:id="@+id/button_options"
            android:layout_width="match_parent"
            android:layout_height="?attr/listPreferredItemHeightSmall"
            android:layout_gravity="center"
            android:background="@drawable/selector_button_main"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingTop="5dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="22dp"
                android:layout_marginRight="7dp"
                android:src="@drawable/translator" />

            <TextView
                android:id="@+id/tv_language"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/language"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
